[gd_scene load_steps=27 format=3 uid="uid://cr7kraxkxnhxq"]

[ext_resource type="MeshLibrary" uid="uid://bliv1kum0e6vu" path="res://Assets/Models/test-blocks-final.tres" id="1_xs3g1"]
[ext_resource type="PackedScene" uid="uid://cusuavcx76vmy" path="res://Scenes/SpringCharacter/spring.tscn" id="2_hmkfj"]
[ext_resource type="PackedScene" uid="uid://cdcbq8kwhuql0" path="res://Assets/Models/tutorialmodel.tscn" id="3_sghjv"]
[ext_resource type="Texture2D" uid="uid://c4j3h3bw63tre" path="res://Assets/UI/gaugeunder.png" id="4_bekv8"]
[ext_resource type="Script" uid="uid://ck6stwkt2trs5" path="res://Scripts/Level/checkpoint.gd" id="4_jovcd"]
[ext_resource type="Texture2D" uid="uid://huw72g3og64t" path="res://Assets/UI/gaugeover.png" id="5_68uyl"]
[ext_resource type="PackedScene" uid="uid://c50bejtvv072c" path="res://Scenes/SpringCharacter/compass.tscn" id="5_iol1o"]
[ext_resource type="Script" uid="uid://nsjb61ymht8x" path="res://Scripts/Level/death_zone.gd" id="5_mnia5"]
[ext_resource type="Script" uid="uid://baf0uyk8a2wl4" path="res://Scripts/UIScripts/chargemeter.gd" id="6_45db0"]
[ext_resource type="PackedScene" uid="uid://cqtfjuiepk7oe" path="res://Scenes/NPCs/npc_gob.tscn" id="7_qvtqq"]
[ext_resource type="AudioStream" uid="uid://dwq2qwcgt8by1" path="res://Assets/Music/Dream_Meadow_Ena.mp3" id="8_mnia5"]
[ext_resource type="PackedScene" uid="uid://d1ybawusua3ru" path="res://Scenes/Interactables/ship_part.tscn" id="12_i0v1t"]

[sub_resource type="GDScript" id="GDScript_sghjv"]
script/source = "extends Node

func _ready():
	pass
	#Dialogic.start(\"test_timeline\")
	
func _process(_delta):
	pass
"

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_xhx3e"]
sky_top_color = Color(0.824498, 0.567902, 0.745864, 1)
sky_horizon_color = Color(0.760784, 0.713726, 0.756863, 1)
ground_bottom_color = Color(0.271208, 0.600924, 0.878637, 1)
ground_horizon_color = Color(0.52549, 0.560784, 0.819608, 1)

[sub_resource type="Sky" id="Sky_pujq4"]
sky_material = SubResource("ProceduralSkyMaterial_xhx3e")

[sub_resource type="Environment" id="Environment_rvfmk"]
background_mode = 2
sky = SubResource("Sky_pujq4")

[sub_resource type="BoxShape3D" id="BoxShape3D_i0v1t"]
resource_local_to_scene = true
size = Vector3(27.802, 9.76202, 30.8689)

[sub_resource type="CylinderMesh" id="CylinderMesh_qvtqq"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_jovcd"]
resource_local_to_scene = true
size = Vector3(1, 24.2698, 50.7669)

[sub_resource type="CylinderMesh" id="CylinderMesh_sghjv"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_mnia5"]
resource_local_to_scene = true
size = Vector3(1, 41.05, 114.8)

[sub_resource type="CylinderMesh" id="CylinderMesh_rq2ec"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_sghjv"]
resource_local_to_scene = true
size = Vector3(1, 28.8187, 74.4746)

[sub_resource type="CylinderMesh" id="CylinderMesh_0mdj5"]
height = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_qvtqq"]
resource_local_to_scene = true
size = Vector3(40.7591, 23.4205, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_0mdj5"]
resource_local_to_scene = true
size = Vector3(393.94, 1, 383.523)

[node name="Main" type="Node"]

[node name="Dialogue" type="Node" parent="."]
script = SubResource("GDScript_sghjv")

[node name="World" type="Node" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource("Environment_rvfmk")

[node name="WorldLight" type="DirectionalLight3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 13.5871, 0)

[node name="WorldGeometry" type="Node" parent="World"]

[node name="l4_1" type="GridMap" parent="World/WorldGeometry"]
mesh_library = ExtResource("1_xs3g1")
cell_size = Vector3(3, 3, 3)
cell_octant_size = 7
cell_scale = 3.0
collision_layer = 3
collision_mask = 3
data = {
"cells": PackedInt32Array(1441836, 65514, 262144, 1441836, 65513, 262144, 1441836, 65512, 262144, 1441836, 65511, 262144, 1441836, 65510, 262144, 1441835, 65510, 262144, 1441842, 65514, 262144, 1441842, 65513, 262144, 1441842, 65512, 262144, 1441842, 65511, 262144, 1441842, 65510, 262144, 1441843, 65509, 262144, 1441843, 65508, 262144, 1441844, 65507, 262144, 1441844, 65506, 262144, 1441845, 65506, 262144, 1441845, 65505, 262144, 1441846, 65505, 262144, 1441846, 65504, 262144, 1441847, 65504, 262144, 1441847, 65503, 262144, 1441847, 65502, 262144, 1441848, 65502, 262144, 1441848, 65501, 262144, 1441848, 65500, 262144, 1441835, 65513, 262144, 1441835, 65512, 262144, 1441835, 65511, 262144, 1441841, 65513, 262144, 1441841, 65512, 262144, 1441837, 65510, 262144, 1441837, 65511, 262144, 1441843, 65510, 262144, 1441844, 65509, 262144, 1441844, 65508, 262144, 1441845, 65504, 262144, 1441846, 65503, 262144, 1441843, 65506, 262144, 1441843, 65507, 262144, 1441842, 65507, 262144, 1441842, 65508, 262144, 1441842, 65509, 262144, 1441837, 65509, 262144, 1441836, 65509, 262144, 1441836, 65508, 262144, 1441836, 65506, 262144, 1441836, 65507, 262144, 1441837, 65508, 262144, 1441842, 65506, 262144, 1441842, 65505, 262144, 1441843, 65505, 262144, 1441843, 65504, 262144, 1441844, 65504, 262144, 1441844, 65503, 262144, 1441845, 65503, 262144, 1441844, 65505, 262144, 1441842, 65504, 262144, 1441842, 65503, 262144, 1441843, 65503, 262144, 1441841, 65505, 262144, 1441841, 65503, 262144, 1441839, 65502, 262144, 1441840, 65502, 262144, 1441841, 65502, 262144, 1441840, 65503, 262144, 1441843, 65502, 262144, 1441844, 65502, 262144, 1441845, 65502, 262144, 1441846, 65502, 262144, 1441846, 65501, 262144, 1441847, 65501, 262144, 1441844, 65501, 262144, 1441843, 65501, 262144, 1441842, 65501, 262144, 1441841, 65501, 262144, 1441840, 65501, 262144, 1441839, 65501, 262144, 1441845, 65501, 262144, 1441842, 65502, 262144, 1441848, 65499, 262144, 1441848, 65498, 262144, 1441847, 65497, 262144, 1441847, 65496, 262144, 1441846, 65495, 262144, 1441845, 65494, 262144, 1441844, 65494, 262144, 1441843, 65494, 262144, 1441842, 65494, 262144, 1441842, 65495, 262144, 1441841, 65495, 262144, 1441840, 65497, 262144, 1441839, 65498, 262144, 1441839, 65499, 262144, 1441839, 65500, 262144, 1441840, 65498, 262144, 1441841, 65497, 262144, 1441842, 65496, 262144, 1441843, 65495, 262144, 1441841, 65498, 262144, 1441840, 65499, 262144, 1441840, 65500, 262144, 1441841, 65496, 262144, 1441843, 65497, 262144, 1441843, 65498, 262144, 1441844, 65499, 262144, 1441845, 65499, 262144, 1441843, 65499, 262144, 1441842, 65499, 262144, 1441841, 65499, 262144, 1441843, 65500, 262144, 1441845, 65500, 262144, 1441846, 65500, 262144, 1441844, 65500, 262144, 1441842, 65500, 262144, 1441841, 65500, 262144, 1441847, 65500, 262144, 1441849, 65499, 262144, 1441846, 65497, 262144, 1441845, 65496, 262144, 1441846, 65496, 262144, 1441848, 65497, 262144, 1441845, 65495, 262144, 1441844, 65496, 262144, 1441844, 65497, 262144, 1441842, 65497, 262144, 1441845, 65497, 262144, 1441846, 65498, 262144, 1441847, 65498, 262144, 1441849, 65498, 262144, 1441847, 65499, 262144, 1441846, 65499, 262144, 1441845, 65498, 262144, 1441844, 65498, 262144, 1441844, 65495, 262144, 1441842, 65498, 262144, 1441843, 65496, 262144, 1441843, 65493, 262144, 1441844, 65493, 262144, 1441845, 65493, 262144, 1441847, 65494, 262144, 1441847, 65495, 262144, 1441849, 65497, 262144, 1441850, 65497, 262144, 1441850, 65496, 262144, 1441849, 65495, 262144, 1441848, 65494, 262144, 1441849, 65496, 262144, 1441848, 65495, 262144, 1441848, 65496, 262144, 1441846, 65494, 262144, 1441846, 65493, 262144, 1441850, 65498, 262144, 1441850, 65499, 262144, 1441850, 65500, 262144, 1441850, 65501, 262144, 1441849, 65501, 262144, 1441849, 65502, 262144, 1441849, 65503, 262144, 1441848, 65503, 262144, 1441848, 65504, 262144, 1441847, 65505, 262144, 1441846, 65506, 262144, 1441849, 65500, 262144, 1441845, 65507, 262144, 1441845, 65508, 262144, 1441844, 65510, 262144, 1441845, 65509, 262144, 1441845, 65510, 262144, 1441844, 65511, 262144, 1441843, 65512, 262144, 1441843, 65511, 262144, 1441850, 65502, 262144, 1441850, 65503, 262144, 1441849, 65505, 262144, 1441848, 65506, 262144, 1441847, 65507, 262144, 1441846, 65507, 262144, 1441849, 65504, 262144, 1441848, 65505, 262144, 1441847, 65506, 262144, 1441846, 65508, 262144, 1441838, 65499, 262144, 1441838, 65500, 262144, 1441835, 65506, 262144, 1441835, 65507, 262144, 1441835, 65508, 262144, 1441835, 65505, 262144, 1441837, 65499, 262144, 1441837, 65500, 262144, 1441835, 65509, 262144, 1441835, 65504, 262144, 1441834, 65504, 262144, 1441834, 65505, 262144, 1441833, 65506, 262144, 1441833, 65507, 262144, 1441833, 65508, 262144, 1441833, 65509, 262144, 1441834, 65509, 262144, 1441834, 65510, 262144, 1441834, 65511, 262144, 1441834, 65508, 262144, 1441834, 65507, 262144, 1441834, 65506, 262144, 1441842, 65493, 262144, 1441841, 65493, 262144, 1441841, 65494, 262144, 1441840, 65495, 262144, 1441840, 65496, 262144, 1441839, 65497, 262144, 1441839, 65496, 262144, 1441839, 65495, 262144, 1441840, 65494, 262144, 1441838, 65497, 262144, 1441838, 65498, 262144)
}
metadata/_editor_floor_ = Vector3(0, 22, 0)

[node name="l4_2" type="GridMap" parent="World/WorldGeometry"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
mesh_library = ExtResource("1_xs3g1")
cell_size = Vector3(3, 3, 3)
cell_octant_size = 7
cell_scale = 3.0
collision_layer = 3
collision_mask = 3
data = {
"cells": PackedInt32Array(1441836, 65514, 262144, 1441836, 65513, 262144, 1441836, 65512, 262144, 1441836, 65511, 262144, 1441836, 65510, 262144, 1441835, 65510, 262144, 1441842, 65514, 262144, 1441842, 65513, 262144, 1441842, 65512, 262144, 1441842, 65511, 262144, 1441842, 65510, 262144, 1441843, 65509, 262144, 1441843, 65508, 262144, 1441844, 65507, 262144, 1441844, 65506, 262144, 1441845, 65506, 262144, 1441845, 65505, 262144, 1441846, 65505, 262144, 1441846, 65504, 262144, 1441847, 65504, 262144, 1441847, 65503, 262144, 1441847, 65502, 262144, 1441848, 65502, 262144, 1441848, 65501, 262144, 1441848, 65500, 262144, 1441835, 65513, 262144, 1441835, 65512, 262144, 1441835, 65511, 262144, 1441841, 65513, 262144, 1441837, 65510, 262144, 1441837, 65511, 262144, 1441843, 65510, 262144, 1441844, 65509, 262144, 1441844, 65508, 262144, 1441845, 65504, 262144, 1441846, 65503, 262144, 1441843, 65506, 262144, 1441843, 65507, 262144, 1441842, 65507, 262144, 1441842, 65508, 262144, 1441842, 65509, 262144, 1441837, 65509, 262144, 1441836, 65509, 262144, 1441836, 65508, 262144, 1441836, 65506, 262144, 1441836, 65507, 262144, 1441837, 65507, 262144, 1441837, 65508, 262144, 1441841, 65506, 262144, 1441842, 65506, 262144, 1441842, 65505, 262144, 1441843, 65505, 262144, 1441843, 65504, 262144, 1441844, 65504, 262144, 1441844, 65503, 262144, 1441845, 65503, 262144, 1441844, 65505, 262144, 1441842, 65504, 262144, 1441841, 65504, 262144, 1441842, 65503, 262144, 1441843, 65503, 262144, 1441840, 65504, 262144, 1441841, 65505, 262144, 1441836, 65505, 262144, 1441841, 65503, 262144, 1441839, 65502, 262144, 1441840, 65502, 262144, 1441841, 65502, 262144, 1441840, 65503, 262144, 1441843, 65502, 262144, 1441844, 65502, 262144, 1441845, 65502, 262144, 1441846, 65502, 262144, 1441846, 65501, 262144, 1441847, 65501, 262144, 1441844, 65501, 262144, 1441843, 65501, 262144, 1441842, 65501, 262144, 1441841, 65501, 262144, 1441840, 65501, 262144, 1441839, 65501, 262144, 1441838, 65501, 262144, 1441845, 65501, 262144, 1441842, 65502, 262144, 1441848, 65499, 262144, 1441848, 65498, 262144, 1441847, 65497, 262144, 1441847, 65496, 262144, 1441846, 65495, 262144, 1441845, 65494, 262144, 1441844, 65494, 262144, 1441843, 65494, 262144, 1441842, 65494, 262144, 1441842, 65495, 262144, 1441841, 65495, 262144, 1441840, 65497, 262144, 1441839, 65498, 262144, 1441839, 65499, 262144, 1441839, 65500, 262144, 1441840, 65498, 262144, 1441841, 65497, 262144, 1441842, 65496, 262144, 1441843, 65495, 262144, 1441841, 65498, 262144, 1441840, 65499, 262144, 1441840, 65500, 262144, 1441841, 65496, 262144, 1441843, 65497, 262144, 1441843, 65498, 262144, 1441844, 65499, 262144, 1441845, 65499, 262144, 1441843, 65499, 262144, 1441842, 65499, 262144, 1441841, 65499, 262144, 1441843, 65500, 262144, 1441845, 65500, 262144, 1441846, 65500, 262144, 1441844, 65500, 262144, 1441842, 65500, 262144, 1441841, 65500, 262144, 1441847, 65500, 262144, 1441849, 65499, 262144, 1441846, 65497, 262144, 1441845, 65496, 262144, 1441846, 65496, 262144, 1441848, 65497, 262144, 1441845, 65495, 262144, 1441844, 65496, 262144, 1441844, 65497, 262144, 1441842, 65497, 262144, 1441845, 65497, 262144, 1441846, 65498, 262144, 1441847, 65498, 262144, 1441849, 65498, 262144, 1441847, 65499, 262144, 1441846, 65499, 262144, 1441845, 65498, 262144, 1441844, 65498, 262144, 1441844, 65495, 262144, 1441842, 65498, 262144, 1441843, 65496, 262144, 1441843, 65493, 262144, 1441844, 65493, 262144, 1441845, 65493, 262144, 1441847, 65494, 262144, 1441847, 65495, 262144, 1441849, 65497, 262144, 1441850, 65497, 262144, 1441850, 65496, 262144, 1441849, 65495, 262144, 1441848, 65494, 262144, 1441849, 65496, 262144, 1441848, 65495, 262144, 1441848, 65496, 262144, 1441846, 65494, 262144, 1441846, 65493, 262144, 1441850, 65498, 262144, 1441850, 65499, 262144, 1441850, 65500, 262144, 1441850, 65501, 262144, 1441849, 65501, 262144, 1441849, 65502, 262144, 1441849, 65503, 262144, 1441848, 65503, 262144, 1441848, 65504, 262144, 1441847, 65505, 262144, 1441846, 65506, 262144, 1441849, 65500, 262144, 1441845, 65507, 262144, 1441845, 65508, 262144, 1441844, 65510, 262144, 1441845, 65509, 262144, 1441845, 65510, 262144, 1441844, 65511, 262144, 1441843, 65512, 262144, 1441843, 65511, 262144, 1441850, 65502, 262144, 1441850, 65503, 262144, 1441849, 65505, 262144, 1441848, 65506, 262144, 1441847, 65507, 262144, 1441846, 65507, 262144, 1441849, 65504, 262144, 1441848, 65505, 262144, 1441847, 65506, 262144, 1441846, 65508, 262144, 1441838, 65499, 262144, 1441838, 65500, 262144, 1441835, 65506, 262144, 1441835, 65507, 262144, 1441835, 65508, 262144, 1441835, 65505, 262144, 1441837, 65499, 262144, 1441837, 65500, 262144, 1441835, 65509, 262144, 1441835, 65504, 262144, 1441834, 65503, 262144, 1441834, 65504, 262144, 1441834, 65505, 262144, 1441833, 65506, 262144, 1441833, 65507, 262144, 1441833, 65508, 262144, 1441833, 65509, 262144, 1441834, 65509, 262144, 1441834, 65510, 262144, 1441834, 65511, 262144, 1441834, 65508, 262144, 1441834, 65507, 262144, 1441834, 65506, 262144, 1441842, 65493, 262144, 1441841, 65493, 262144, 1441841, 65494, 262144, 1441840, 65495, 262144, 1441840, 65496, 262144, 1441839, 65497, 262144, 1441839, 65496, 262144, 1441839, 65495, 262144, 1441840, 65494, 262144, 1441838, 65497, 262144, 1441838, 65498, 262144, 1441841, 65512, 262144)
}
metadata/_editor_floor_ = Vector3(0, 22, 0)

[node name="Node3D" parent="World/WorldGeometry" instance=ExtResource("3_sghjv")]
transform = Transform3D(-3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0, 9.76923, 0)

[node name="Checkpoints" type="Node" parent="World"]

[node name="Checkpoint_Spawn" type="Area3D" parent="World/Checkpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.74872, 0)
visible = false
script = ExtResource("4_jovcd")

[node name="Checkpoint_Col" type="CollisionShape3D" parent="World/Checkpoints/Checkpoint_Spawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.65873, 4.38101, 3.13245)
shape = SubResource("BoxShape3D_i0v1t")

[node name="Checkpoint_Resapwn_Visual" type="MeshInstance3D" parent="World/Checkpoints/Checkpoint_Spawn"]
mesh = SubResource("CylinderMesh_qvtqq")

[node name="Checkpoint1" type="Area3D" parent="World/Checkpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 47.8606, 14.5193, 0)
visible = false
script = ExtResource("4_jovcd")

[node name="Checkpoint_Col" type="CollisionShape3D" parent="World/Checkpoints/Checkpoint1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.1012, -0.064894)
shape = SubResource("BoxShape3D_jovcd")

[node name="Checkpoint_Respawn_Visual" type="MeshInstance3D" parent="World/Checkpoints/Checkpoint1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.944234, 0)
mesh = SubResource("CylinderMesh_sghjv")

[node name="Checkpoint2" type="Area3D" parent="World/Checkpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 78.0525, 15.6912, 0)
visible = false
script = ExtResource("4_jovcd")

[node name="Checkpoint_Col" type="CollisionShape3D" parent="World/Checkpoints/Checkpoint2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.6554, -4.85461)
shape = SubResource("BoxShape3D_mnia5")

[node name="Checkpoint_Resapwn_Visual" type="MeshInstance3D" parent="World/Checkpoints/Checkpoint2"]
mesh = SubResource("CylinderMesh_rq2ec")

[node name="Checkpoint3" type="Area3D" parent="World/Checkpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 112.597, 39.9337, 0)
visible = false
script = ExtResource("4_jovcd")

[node name="Checkpoint_Col" type="CollisionShape3D" parent="World/Checkpoints/Checkpoint3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9838, 11.8415, -7.28984)
shape = SubResource("BoxShape3D_sghjv")

[node name="Checkpoint_Resapwn_Visual" type="MeshInstance3D" parent="World/Checkpoints/Checkpoint3"]
mesh = SubResource("CylinderMesh_0mdj5")

[node name="Checkpoint4" type="Area3D" parent="World/Checkpoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 132.572, 73.3496, -71.5419)
visible = false
script = ExtResource("4_jovcd")

[node name="Checkpoint_Col" type="CollisionShape3D" parent="World/Checkpoints/Checkpoint4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.6912, 6.81551, 0)
shape = SubResource("BoxShape3D_qvtqq")

[node name="Checkpoint_Resapwn_Visual" type="MeshInstance3D" parent="World/Checkpoints/Checkpoint4"]
mesh = SubResource("CylinderMesh_0mdj5")

[node name="DeathZones" type="Node" parent="World"]

[node name="DeathZone" type="Area3D" parent="World/DeathZones"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 52.8963, 1.63092, 6.53071)
script = ExtResource("5_mnia5")

[node name="DeathZone_Col" type="CollisionShape3D" parent="World/DeathZones/DeathZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 53.1448, -5.28092, -66.3206)
shape = SubResource("BoxShape3D_0mdj5")

[node name="NPC" type="Node" parent="World"]

[node name="Gob" parent="World/NPC" instance=ExtResource("7_qvtqq")]
transform = Transform3D(-0.169264, 0, -0.985571, 0, 1, 0, 0.985571, 0, -0.169264, 37.1751, 13.1072, 4.5374)

[node name="SpringStuff" type="Node" parent="."]

[node name="TestSpring" parent="SpringStuff" instance=ExtResource("2_hmkfj")]
transform = Transform3D(0.999959, 0, -0.00900578, 0, 1, 0, 0.00900578, 0, 0.999959, 0.554433, 6.85961, -0.501079)

[node name="Compass" parent="SpringStuff" instance=ExtResource("5_iol1o")]
transform = Transform3D(0.999959, 0, -0.00900578, 0, 1, 0, 0.00900578, 0, 0.999959, 0.554433, 6.77291, -0.501079)

[node name="Misc" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Misc"]
stream = ExtResource("8_mnia5")
volume_db = -20.0
autoplay = true

[node name="ship_part" parent="Misc" instance=ExtResource("12_i0v1t")]
transform = Transform3D(-3.0598e-08, 0, -0.7, 0, 0.7, 0, 0.7, 0, -3.0598e-08, 115.87, 85.423, -139.036)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.304077
offset_bottom = -2.0
metadata/_edit_use_anchors_ = true

[node name="chargemeter" type="TextureProgressBar" parent="UI" node_paths=PackedStringArray("spring")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375
anchor_top = 0.711
anchor_right = 0.488
anchor_bottom = 1.0
offset_left = 0.249969
offset_top = 0.69397
offset_right = 129.848
offset_bottom = 184.0
scale = Vector2(0.5, 0.5)
fill_mode = 3
texture_under = ExtResource("4_bekv8")
texture_progress = ExtResource("5_68uyl")
script = ExtResource("6_45db0")
spring = NodePath("../../SpringStuff/TestSpring")

[connection signal="cp_pos" from="World/Checkpoints/Checkpoint_Spawn" to="SpringStuff/TestSpring" method="_on_cp_pos"]
[connection signal="cp_pos" from="World/Checkpoints/Checkpoint1" to="SpringStuff/TestSpring" method="_on_cp_pos"]
[connection signal="cp_pos" from="World/Checkpoints/Checkpoint2" to="SpringStuff/TestSpring" method="_on_cp_pos"]
[connection signal="cp_pos" from="World/Checkpoints/Checkpoint3" to="SpringStuff/TestSpring" method="_on_cp_pos"]
[connection signal="cp_pos" from="World/Checkpoints/Checkpoint4" to="SpringStuff/TestSpring" method="_on_cp_pos"]
[connection signal="destroy_spring" from="World/DeathZones/DeathZone" to="SpringStuff/TestSpring" method="_on_destroy_spring"]
[connection signal="spring_pos" from="SpringStuff/TestSpring" to="SpringStuff/Compass" method="_on_test_spring_spring_pos"]
[connection signal="target_pos" from="Misc/ship_part" to="SpringStuff/Compass" method="_on_ship_part_target_pos"]
